<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    tools:context="com.example.user.gasoline.fragments.FragmentFillup">

    <LinearLayout
        android:id="@+id/ll_h_Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Дата"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:inputType="date"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="..."
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_h_Vol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtVolume"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Volume"
            android:textSize="20sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/edVolume"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/liters"
            android:gravity="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_h_Price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Price"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtRub"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/curRUR"
            android:gravity="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_h_Sum"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtSum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Sum"
            android:gravity="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edSum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/curRUR"
            android:gravity="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_h_Full"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">


        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/FullTank"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textOn="Да"
            android:textOff="Нет"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_h_Odo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtOdo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Odometr"
            android:gravity="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edOdo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:textSize="20sp"
            android:inputType="number|numberDecimal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="км"
            android:gravity="center"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_h_BtnOK"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/btnOK"
            android:textSize="32sp" />
    </LinearLayout>


</LinearLayout>



