<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    tools:context="com.example.user.gasoline.fragments.FragmentCars">

    <LinearLayout
        android:id="@+id/ll_h_Mark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/Mark"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edMark"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:textSize="20sp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_h_Model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtModel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/Model"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edModel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:textSize="20sp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_h_Tank"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTank"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/Tank"
            android:textAlignment="center"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edTank"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number|numberDecimal"
            android:textSize="20sp" />
    </LinearLayout>

     <LinearLayout
        android:id="@+id/ll_h_BtnOK"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnCarModel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/btnOK"
            android:textSize="32sp" />
    </LinearLayout>

</LinearLayout>




